<resources>
    <string name="app_name">CLAD</string>

    <string name="clad_shopping_service_url">https://www.google.com/</string>
    <string name="clad_privacy_notice_url">https://www.google.com/</string>
    <string name="cookie_notice_url">https://www.google.com/</string>
    <string name="terms_url">https://www.google.com/</string>

    <!--    for onboarding-->
    <string name="str_onheading">Exceptional\nModern Clothings</string>
    <string name="str_ontitle">Shop for exceptional modern clothings for\nyour everyday life</string>
    <string name="str_btnonapple">Continue with Apple</string>
    <string name="str_btnongoole">Continue with Google</string>
    <string name="str_btnshop">Continue with Shopping</string>


    <!--   for phone number-->
    <string name="str_fopassword">Enter your phone number.</string>
    <string name="str_fopasswordheading">We will send your 4-digit verification code in this number.</string>
    <string name="str_foresend">Resend Code</string>
    <string name="str_fotiming">New code in 09 seconds</string>

    <!--phone verification-->
    <string name="str_vetitle">Phone Verification</string>
    <string name="str_vemessage">Please enter the 4-digit code sent to you</string>

    <string name="str_btnnext">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    order placed text-->
    <string name="opf_text1">THANK YOU FOR\nYOUR ORDER</string>
    <string name="opf_text2">Estimated Delivery</string>
    <string name="opf_text3">We’ve emailed you a confirmation and we’ll notify you when your order has shipped.</string>
    <string name="opf_text4">VIEW ORDER DETAILS</string>

    <!--    shopping bag empty-->
    <string name="sbe_text1">YOUR BAG IS EMPTY</string>
    <string name="sbe_text2">Add items to your shopping mart</string>
    <string name="sbe_text3">BROWSE THE SHOP</string>


    <!--    home fragment-->
    <string name="hf_text1">Popular This Month</string>
    <string name="view_all">View All</string>
    <string name="hf_text2">Recommended</string>
    <string name="hf_text3">New Subscription Boxes</string>
    <string name="hf_text4">Popular Brands</string>
    <string name="hf_text5">Just Dropped</string>
    <string name="hf_text6">Most Popular</string>

    <string name="shopping_bag">SHOPPING BAG</string>
    <string name="shop">Shop</string>
    <string name="drops">Drops</string>
    <string name="thrift">Thrift</string>
    <string name="profile">Profile</string>
    <string name="wishlist">Wishlist</string>
    <string name="order_details">Order Details</string>
    <string name="refine_filter">Refine Filter</string>


    <string name="randomText">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English.</string>
    <string name="clad">Clad</string>

    <string name="rs">Rs.</string>
    <string name="usd">$</string>

    <string name="npr_case">npr</string>

    <!--    wishlist-->
    <string name="wl_case1">Add to Bag</string>
    <string name="wl_case2">Remove from wishlist</string>
    <string name="wl_case3">Change Size</string>
    <string name="save">Save</string>
    <string name="questions_about_this_product_5">Questions about this Product(%1$s)</string>

    <array name="initial_slider_values">
        <item>300.0</item>
        <item>1000.0</item>
    </array>

</resources>