<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".shopping_bag.order_placed.FragmentOrderPlaced"
    android:background="@color/order_background">

    <TextView
        android:id="@+id/title"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opf_text1"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginHorizontal="20dp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_below="@id/title"
        android:layout_above="@id/btnViewOrder"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_image_shopping_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/btnViewOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="shop more"
        android:layout_marginHorizontal="30dp"
        android:layout_above="@id/text_date"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:id="@+id/text_date"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="June 20 2022"
        android:textSize="15sp"
        android:layout_marginHorizontal="30dp"
        android:layout_above="@id/textView3"
        android:textColor="@color/colorGrayTextShopping"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/opf_text3"
        android:layout_marginHorizontal="30dp"
        android:layout_above="@id/btnView"
        android:textColor="@color/colorGrayTextShopping"/>

    <Button
        android:id="@+id/btnView"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/opf_text4"
        android:background="@drawable/ripple_5dp_black" />
</RelativeLayout>