<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".password.Fragment_Verfication">

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/spin_kit"
        style="@style/SpinKitView.Large.Circle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:visibility="visible"
        app:SpinKit_Color="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <RelativeLayout
                        android:id="@+id/relativeLayout"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="@dimen/di_marginstart_forgot"
                        android:layout_marginTop="@dimen/di_marginstart_forgot"
                        android:background="@drawable/background_circle"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:src="@drawable/ic_close" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/di_marginstart_forgot"
                        android:layout_marginTop="30dp"
                        android:fontFamily="@font/sf_pro_text_bold"
                        android:text="@string/str_vetitle"
                        android:textColor="@color/black"
                        android:textSize="@dimen/di_verisize"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/di_marginstart_forgot"
                        android:layout_marginTop="8dp"
                        android:text="@string/str_vemessage"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        tools:layout_editor_absoluteX="30dp" />


                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:layout_marginStart="36dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/str_foresend"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2"
                        app:layout_constraintVertical_bias="0.0" />

                    <com.mukesh.OtpView
                        android:id="@+id/pinview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="77dp"
                        android:layout_marginEnd="30dp"
                        android:focusableInTouchMode="true"
                        android:inputType="number"
                        android:itemBackground="@drawable/background_circle"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:OtpHideLineWhenFilled="true"
                        app:OtpItemCount="4"
                        app:OtpItemSpacing="6dp"

                        app:OtpLineColor="@android:color/transparent"
                        app:OtpState_filled="true"
                        app:OtpViewType="line"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/textView3" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/di_marginstart_forgot"
                        android:layout_marginTop="56dp"
                        android:textAlignment="center"
                        android:text="@string/str_fotiming"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/pinview" />

                    <Button
                        android:id="@+id/btnnext"
                        android:layout_width="328dp"
                        android:layout_height="43dp"
                        android:layout_marginHorizontal="@dimen/onboard_item_ho_margin"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="94dp"
                        android:layout_marginEnd="30dp"
                        android:visibility="gone"
                        android:background="@drawable/ripple_on_button_drawable"
                        android:text="@string/str_btnnext"
                        android:textAllCaps="false"
                        android:textSize="16sp"
                        app:backgroundTint="@null"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>